--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -79,8 +79,8 @@
             </div>
 
             <div></div>
-            <button mat-raised-button color="success" style="position: absolute;right: 40px;
-            top: 650px; background-color:#063074;color: white;" (click)="saveProjectInfo()">Save</button>
+            <!-- <button mat-raised-button color="success" style="position: absolute;right: 40px;
+            top: 650px; background-color:#063074;color: white;" (click)="saveProjectInfo()">Save</button> -->
         </div>
         <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Manage Directors</div>
 
@@ -177,5 +177,8 @@
 
         </div>
     </div>
+
+    <button mat-raised-button color="success" style="position: absolute;right: 40px;
+    top: 650px; background-color:#063074;color: white;" (click)="saveProjectInfo()">Save</button>
     <br>
     <br>
