Hide menu when navigate to bmx-creation

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -72,7 +72,7 @@
 .bmx-page {
     // width: 628%;
     height: 90.8vh;
-    width: 73vw;
+    width: 100%;
     overflow-y: scroll;
     @include BoxShadow(2);
 }
