--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,3 +91,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+app-survey-creation-design{
+    width: 100%;
+}
