--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -12,8 +12,8 @@
 </div>
 <div *ngIf="hideMenu" class="corner_bar_menu">
   <button *ngIf="false" matTooltip="new post it" matTooltipPosition="above" mat-icon-button color="warn"
-      aria-label="aria">
-      <mat-icon class="full-icon">note_add</mat-icon>
+    aria-label="aria">
+    <mat-icon class="full-icon">note_add</mat-icon>
   </button>
   <!-- <button *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button
       style="border-radius: 50%; border: 2px solid grey;outline: none;" aria-label="aria">
@@ -23,8 +23,8 @@
     Proprietary & Confidential
   </button> -->
   <button (click)="toggleMenu()" matTooltip="" matTooltipPosition="above" mat-icon-button color="warn"
-      aria-label="aria">
-      <mat-icon class="full-icon">menu</mat-icon>
+    aria-label="aria">
+    <mat-icon class="full-icon">menu</mat-icon>
   </button>
   <!-- <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button
       aria-label="aria">
@@ -46,7 +46,7 @@
   </div>
   <div class="movil">
 
-    <div class="menu-container" >
+    <div class="menu-container">
       <div class="menu-item-Light" (click)="navigateTo('dashboard')">
         <i class="bi bi-list-task"></i> Project List
       </div>
@@ -88,12 +88,12 @@
   </div>
   <div class="movil">
 
-    <div class="menu-container" >
+    <div class="menu-container">
       <div class="menu-item-Light" (click)="navigateTo('dashboard')">
         <i class="bi bi-list-task"></i> Project List
       </div>
       <div class="menu-item-Light" (click)="navigateTo('project-information')">
-      Project Information
+        Project Information
       </div>
 
       <div class="menu-item-Dark" (click)="navigateTo('bmx-creation/99CB72BF-D163-46A6-8A0D-E1531EC7FEDC')">
@@ -138,3 +138,10 @@
     </div>
   </div>
 </div>
+
+<button class="no-print" *ngIf="!isDashboardMenu && !hideMenu"  
+  style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;"
+  (click)="toggleMenu()" mat-icon-button matTooltip="preview" matTooltipPosition="above">
+  <mat-icon class="full-icon" style="font-size: 35px;">visibility
+  </mat-icon>
+</button>
