Remove menu in preview view

--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -31,7 +31,7 @@
       GO
   </button> -->
 </div>
-<div *ngIf="isDashboardMenu" class="general-container">
+<div *ngIf="isDashboardMenu && !isPreviewView" class="general-container">
   <div class="logo-container">
     <img style="    width: 100%;" src="assets/img/bmx/bm-logo-2020-md.png" alt="logo" />
   </div>
