Remove menu in preview view

--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -71,7 +71,7 @@
   </div>
 </div>
 
-<div *ngIf="!isDashboardMenu && !hideMenu" class="general-container">
+<div *ngIf="!isDashboardMenu && !hideMenu && !isPreviewView" class="general-container">
   <div class="logo-container">
     <img style="    width: 100%;" src="assets/img/bmx/bm-logo-2020-md.png" alt="logo" />
   </div>
