--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,10 +10,10 @@
 }
 
 @media (max-width: 992px) {
-    .container {
-        display: flex;
-        width: 100%;
-        flex-direction: column;
-        justify-content: space-between;
-    }
+    // .container {
+    //     display: flex;
+    //     width: 100%;
+    //     flex-direction: column;
+    //     justify-content: space-between;
+    // }
 }
