--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.scss
@@ -39,7 +39,35 @@
   color: grey;
   // animation: bounce 1000ms 1000ms ease-in-out  forwards  ;
 }
+.section2{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
 
+}
+.row-boxSM{
+  display: flex;
+  gap: 1rem;
+  flex-direction: row;
+  justify-content: center;
+
+}
+.column-boxSM{
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  justify-content: center;
+
+}
+.section3{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1.2rem;
+}
 @media (min-width: 1025px) {
   .desktop {
     display: flex;
@@ -158,7 +186,7 @@
 .add-column-active {
   outline: none;
   float: right;
-  
+
   mat-icon{
     color: #324395;
   }
@@ -541,12 +569,12 @@ input[type="range"]:focus::-ms-fill-upper {
       img:last-child {
           margin-bottom: 0;
       }
-  }    
+  }
 
   .close-modal {
       // margin-bottom: 5px;
       position: relative;
-  
+
       // top: 12%;
       left: 42.5%;
       width: 15%;
@@ -629,7 +657,7 @@ input[type="range"]:focus::-ms-fill-upper {
       height: auto;
   }
 
-  
+
 
   .modal-video .close-modal {
       position: relative;
