--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -35,7 +35,8 @@
   <div class="logo-container">
     <img style="    width: 100%;" src="assets/img/bmx/bm-logo-2020-md.png" alt="logo" />
   </div>
-  <div class="welcome">
+ <div class="cont-welcome" >
+    <div class="welcome">
     <mat-icon style="color: white;padding: 15px;">account_circle</mat-icon>
     <div class="welcome-role"
       style="color: white; width: 100%;text-align: center;font-family: Arial, Helvetica, sans-serif;margin-top: 10px;">
@@ -43,7 +44,10 @@
       <br>
       Role: {{userRole}}
     </div>
+
   </div>
+
+ </div>
   <div class="movil">
 
     <div class="menu-container">
@@ -139,7 +143,7 @@
   </div>
 </div>
 
-<button class="no-print" *ngIf="!isDashboardMenu && !hideMenu"  
+<button class="no-print" *ngIf="!isDashboardMenu && !hideMenu"
   style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;"
   (click)="toggleMenu()" mat-icon-button matTooltip="preview" matTooltipPosition="above">
   <mat-icon class="full-icon" style="font-size: 35px;">visibility
