--- a/src/app/bmx/components/respondents/respondents.component.html
+++ b/src/app/bmx/components/respondents/respondents.component.html
@@ -1,6 +1,6 @@
-<div style="width: 900px;">
+<div style="width: 71%;">
 
-    <div >
+    <div style="width: 77%;" >
         <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">Send</div>
 
         <mat-form-field style="  width: 94%;margin: 20px;" appearance="outline">
@@ -127,7 +127,7 @@
             </table>
         </div>
         -->
-        
+
 
 
     </div>
