--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -5,7 +5,7 @@
         <div style="width: 100%;">
             &nbsp;
         </div>
-       
+
         <!-- BRAND MATRIX MODULAR TEMPLATE COMPONENTS  🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 -->
         <div *ngFor="let bmxItem of bmxPages[currentPage].page; let i = index"
             style="display: flex;flex-direction: column;margin: 10px;align-content: center;">
@@ -168,35 +168,38 @@
                     [survey]="false" [bmxClientPageOverview]="bmxClientPageOverview"></app-tinder>
             </div>
             <!-- END TINDER  🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥 -->
+            <!-- PAGE BUTTONS AND DIRECTIONS 1 2 3 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲-->
+            <div class="page-buttons">
+                <div [ngClass]="bmxClientPageDesignMode?'page-buttons-heigth-40':'page-buttons-heigth-minus-50'">
 
-        </div>
+                    <button (click)="changePage('previous')" mat-icon-button>
+                        <mat-icon class="full-icon">chevron_left</mat-icon>
+                    </button>
+                    <button (click)="changePage('previous')" mat-icon-button>
+                        Prev
+                    </button>
+                    <div *ngFor="let page of bmxPages; let pageIndex = index">
+                        <button style="min-width: 35px;" (click)="selectPageNumber(pageIndex)"
+                            [ngClass]="(currentPage === pageIndex)?'pageNumberActive':'pageNumber'" mat-raised-button>
+                            {{page.pageNumber}}
+                        </button>
+                    </div>
 
-
-        <!-- PAGE BUTTONS AND DIRECTIONS 1 2 3 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲-->
-        <div class="page-buttons">
-            <div [ngClass]="bmxClientPageDesignMode?'page-buttons-heigth-40':'page-buttons-heigth-minus-50'">
-
-                <button (click)="changePage('previous')" mat-icon-button>
-                    <mat-icon class="full-icon">chevron_left</mat-icon>
-                </button>
-                <button (click)="changePage('previous')" mat-icon-button>
-                    Prev
-                </button>
-                <div *ngFor="let page of bmxPages; let pageIndex = index">
-                    <button style="min-width: 35px;" (click)="selectPageNumber(pageIndex)"
-                        [ngClass]="(currentPage === pageIndex)?'pageNumberActive':'pageNumber'" mat-raised-button>
-                        {{page.pageNumber}}
+                    <button (click)="changePage('next')" mat-icon-button>
+                        Next
+                    </button>
+                    <button (click)="changePage('next')" mat-icon-button>
+                        <mat-icon class="full-icon">chevron_right</mat-icon>
                     </button>
                 </div>
-
-                <button (click)="changePage('next')" mat-icon-button>
-                    Next
-                </button>
-                <button (click)="changePage('next')" mat-icon-button>
-                    <mat-icon class="full-icon">chevron_right</mat-icon>
+                <button class="no-print" *ngIf="globalProjectName.length > 0"
+                    style="position: relative;z-index: 9999999999; left: 20px;;outline: none;"
+                    mat-raised-button class="project-name-global">
+                    PROJECT: {{globalProjectName}}
                 </button>
             </div>
         </div>
+
         <!-- 📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲📲 END PAGE BUTTONS AND DIRECTIONS -->
 
         <!-- END 🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀🧑🏻‍🚀 BRAND MATRIX MODULAR LEGO TEMPLATE COMPONENTS   -->
