--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -30,6 +30,34 @@
     }
 }
 
+.no-print{
+    color: #324395;
+        font-size: 25px;
+        transition: all 0.1s ease-in-out;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+}
+
+
+.project-name-global{
+    color: #324395;
+    font-size: 25px;
+    transition: all 0.1s ease-in-out;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #0bd659;
+}
+
+@media print {
+    .no-print,
+    .no-print * {
+        
+        display: none !important;
+    }
+
+    .break-page {
+        page-break-after: always;
+    }
+}
+
 .paragraph {
     display: flex;
     flex-direction: column;
@@ -50,24 +78,22 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    position: absolute;
     justify-content: center;
-
+    bottom: 10px;
+    left: 45%;
 }
 .page-buttons-heigth-minus-50 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    position: fixed;
-    bottom: -7px;
-    top: 52rem;
+    
 }
 .page-buttons-heigth-40 {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    position: fixed;
     bottom: 40px;
 }
 
