--- a/src/app/bmx/components/menu/menu.component.html
+++ b/src/app/bmx/components/menu/menu.component.html
@@ -143,7 +143,7 @@
   </div>
 </div>
 
-<button class="no-print" *ngIf="!isDashboardMenu && !hideMenu"
+<button class="no-print" *ngIf="!isDashboardMenu && !hideMenu && !isPreviewView"
   style="position: absolute;bottom: 30px;z-index: 9999999999;right: 30px;outline: none;"
   (click)="toggleMenu()" mat-icon-button matTooltip="preview" matTooltipPosition="above">
   <mat-icon class="full-icon" style="font-size: 35px;">visibility
