--- a/src/app/bmx/components/project-list/project-list.component.html
+++ b/src/app/bmx/components/project-list/project-list.component.html
@@ -3,7 +3,8 @@
         <div style="display: flex;justify-content: space-between; margin-top: 20px;">
             <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">MATRIX LIST</div>
             <mat-form-field style="float:right; padding-right: 20px" appearance="outline">
-                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+                <mat-label>Search</mat-label>
+                <input matInput (keyup)="applyFilter($event.target.value)" value="search" placeholder="Search">
             </mat-form-field>
             <mat-form-field appearance="outline" style="border-radius: 0px">
                 <mat-label>Sort By</mat-label>
