Add inputs description

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank/image-rank.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank/image-rank.component.html
@@ -169,6 +169,9 @@
             <mat-label>Copy & Paste TEST NAMES</mat-label>
             <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" placeholder=""></textarea>
         </mat-form-field>
+        <p style="margin-left: 30px; color: #757575;">
+            Add the names you want to test
+        </p>
     </div>
 
     <hr>
