--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -1,10 +1,11 @@
-<div *ngIf="showCreationModalVideo && bmxClientPageOverview"  id="myModal" class="modal-video" style="display: flex;flex-direction: column;gap: 2px;">
+<div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
+    style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
         <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
         <span class="checkmark">&#x2714;</span>        
     </label> -->
     <div class="modal-content">
-        <video src='{{CREATION_VIDEO_PATH}}'controls></video>
+        <video src='{{CREATION_VIDEO_PATH}}' controls></video>
 
     </div>
     <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
@@ -136,9 +137,9 @@
             </button>
         </div>
 
-        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
-                matTooltipPosition="above" mat-icon-button aria-label="ranking">
-                <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
+        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
+            matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
+            <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>
 
         <button (click)="insertCommentBoxColumn();editSingleTableCells = false" class="add-column"
@@ -182,20 +183,34 @@
     <div>
         <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
             <mat-label>Copy & Paste TEST NAMES</mat-label>
-            <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" (paste)="onPaste()" placeholder=""></textarea>
+            <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" (paste)="onPaste()"
+                placeholder=""></textarea>
         </mat-form-field>
+        <p style="margin-left: 30px; color: #757575;">
+            Add the names you want to test
+        </p>
     </div>
 
     <hr>
     <div style="display: flex;flex-direction: row;justify-content: space-around;gap: 10px;">
+        <div style="display: flex; flex-direction: column;">
 
-        <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
-            [value]="bmxItem.componentSettings[0].categoryName" [placeholder]="'Category Name'"
-            style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px;width: 20%">
-        <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
-            [value]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description"
-            style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px;width: 20%">
+            <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
+                [value]="bmxItem.componentSettings[0].categoryName" [placeholder]="'Category Name'"
+                style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px;width: 100%">
+            <p style="margin-left: 25px; color: #757575;">
+                Add a category to the left side
+            </p>
+        </div>
+        <div style="display: flex; flex-direction: column;">
 
+            <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
+                [value]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description"
+                style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px;width: 100%">
+            <p style="margin-left: 25px; color: #757575;">
+                Add a rate matrix subtitle
+            </p>
+        </div>
         <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Logos</mat-checkbox>
 
 
@@ -262,30 +277,39 @@
         style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;align-items: center;">
         <div style="display: flex;flex-direction: column;">
             <div style="font-size: 12px;color: #48535e;">TYPE NEW CRITERIA</div>
-            <div style="display: flex;">
+            <div style="display: flex; flex-direction: column;">
                 <input type="text" [(ngModel)]="newCriteria"
                     style="font-size: 12px;color: #324395;padding-bottom: 7px;padding-left: 10px; width: 290px;">
                 <mat-icon style="cursor: pointer;font-size: 33px;color: #324395;"
                     (click)="addCriteria(newCriteria);newCriteria=''">add_box</mat-icon>
+                <p style="margin-left: 25px; color: #757575;">
+                    Add new criteria types
+                </p>
             </div>
-            <mat-form-field appearance="outline" style="margin: 0px;">
-                <mat-label>choose criteria</mat-label>
-                <mat-select multiple [(ngModel)]="selectedCriteria"
-                    (selectionChange)="criteriaSelection(selectedCriteria)">
-                    <mat-option *ngFor="let cirteriaItem of CRITERIA; let c = index" [value]="cirteriaItem">
-                        {{cirteriaItem.name}}
-                        <mat-icon matTooltip="double click to delete criteria" matTooltipPosition="right"
-                            style="cursor: pointer;font-size: 15px;color: #ee7f25;" (dblclick)="deleteCriteria(c);">
-                            cancel</mat-icon>
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
+            <div style="display: flex; flex-direction: column;">
+                <mat-form-field appearance="outline" style="margin: 0px;">
+                    <mat-label>choose criteria</mat-label>
+                    <mat-select multiple [(ngModel)]="selectedCriteria"
+                        (selectionChange)="criteriaSelection(selectedCriteria)">
+                        <mat-option *ngFor="let cirteriaItem of CRITERIA; let c = index" [value]="cirteriaItem">
+                            {{cirteriaItem.name}}
+                            <mat-icon matTooltip="double click to delete criteria" matTooltipPosition="right"
+                                style="cursor: pointer;font-size: 15px;color: #ee7f25;" (dblclick)="deleteCriteria(c);">
+                                cancel</mat-icon>
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <p style="margin-left: 25px; color: #757575;">
+                    Select the type of criteria
+                </p>
+            </div>
         </div>
         <div>
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;">SELECT RATING RANGE</div>
             <br>
             <div style="text-align: center;display: flex;flex-direction: row;justify-content: space-around;">
-                {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="5" max="10">
+                {{numRatingScale}} <input [(ngModel)]="rankingScaleValue" type="range" id="volume" name="volume" min="5"
+                    max="10">
                 10 <br>
             </div>
             <label for="volume">{{rankingScaleValue}}</label>
@@ -453,9 +477,9 @@
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
                     <div *ngIf="(y == 0)" class="header-title " (mouseenter)="selectedColumn = e">
-                        
+
                         <div style="display: flex;flex-direction: row;justify-content: space-between;">
-                                             
+
                             <textarea *ngIf="editSingleTableCells"
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                 style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
@@ -513,8 +537,9 @@
                                 <ng-template #elseBlock>
                                     <div style="position: relative;">
                                         <mat-icon matRipple *ngFor="let star of  testName.STARS; let x =  index"
-                                        (click)="saveRate(y);setRating(star.id,y)"    [ngClass]="star.styleClass"
-                                            (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"(click)="checkAutosave(y)"
+                                            (click)="saveRate(y);setRating(star.id,y)" [ngClass]="star.styleClass"
+                                            (mouseenter)="selectStar(star.id , y)" (mouseleave)="leaveStar(y)"
+                                            (click)="checkAutosave(y)"
                                             style="outline: none;margin:1px -1px;cursor: pointer;">{{star.icon}}
                                         </mat-icon>
                                     </div>
@@ -624,14 +649,15 @@
         <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
     </div>
-    
+
     <div class="scroller-style main-container" cdkDropList (cdkDropListDropped)="checkDragEvetn($event)"
         [cdkDropListAutoScrollDisabled]="false" [cdkDropListLockAxis]="'y'">
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;" cdkDrag>
 
-            <div (click)="openSelected(y)" class="test-name-table" *ngIf="(y != 0)" [style.height]="(open(y))?'':'100px'">
-                              
+            <div (click)="openSelected(y)" class="test-name-table" *ngIf="(y != 0)"
+                [style.height]="(open(y))?'':'100px'">
+
                 <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                 <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
                     *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
