--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -146,8 +146,8 @@
             </button>
         </div>
 
-        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
-            matTooltipPosition="above" mat-icon-button aria-label="ranking">
+        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column"
+            matTooltip="see tutorial" matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>
         <button (click)="insertCommentBoxColumn(); editSingleTableCells = false" class="add-column"
@@ -188,24 +188,36 @@
         <div style="font-size: 16px;margin: 20px;color: #48535e;">Copy & Paste TEST NAMES</div>
         <!-- <div style="font-size: 14px;margin-bottom: 20px;color: lightgray;">Brief Description Here</div> -->
     </div>
-    <div style="display: flex;justify-content: center;justify-items: center;">
+    <div style="display: flex;justify-content: center;justify-items: center; display: flex; flex-direction: column;">
 
         <mat-form-field style="width: 90%;margin-left: 20px;" appearance="outline">
             <mat-label>Copy & Paste TEST NAMES</mat-label>
             <textarea matInput rows="4" cols="50" [(ngModel)]="testNamesInput" (paste)="onPaste()"
                 placeholder=""></textarea>
         </mat-form-field>
-
+        <p style="margin-left: 30px; color: #757575;">
+            Add the names you want to test
+        </p>
     </div>
 
     <hr>
     <div style="display: flex;flex-direction: row;justify-content: space-around;gap: 10px;">
-        <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
-            [value]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
-            style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px;width: 20%">
-        <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
-            [value]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description"
-            style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px;width: 20%">
+        <div style="display: flex; flex-direction: column;">
+            <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryName"
+                [value]="bmxItem.componentSettings[0].categoryName" placeholder="Category Name"
+                style="font-size: 20px;color: #324395;padding-bottom: 7px;padding-left: 10px;width: 100%">
+            <p style="margin-left: 25px; color: #757575;">
+                Add a category to the left side
+            </p>
+        </div>
+        <div style="display: flex; flex-direction: column;">
+            <input type="text" [(ngModel)]="bmxItem.componentSettings[0].categoryDescription"
+                [value]="bmxItem.componentSettings[0].categoryDescription" placeholder="Category Description"
+                style="font-size: 20px;color: #ee7f25;padding-bottom: 4px;padding-left: 7px;width: 100%">
+            <p style="margin-left: 25px; color: #757575;">
+                Add a rate matrix subtitle
+            </p>
+        </div>
         <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
         <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;">
             <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
@@ -228,26 +240,32 @@
 
         <div style="display: flex;flex-direction: column;">
             <div style="font-size: 12px;color: #48535e;">TYPE NEW CRITERIA</div>
-            <div style="display: flex;">
+            <div style="display: flex; flex-direction: column;">
                 <input type="text" [(ngModel)]="newCriteria"
                     style="font-size: 12px;color: #324395;padding-bottom: 7px;padding-left: 10px; width: 290px;">
                 <mat-icon style="cursor: pointer;font-size: 33px;color: #324395;"
                     (click)="addCriteria(newCriteria);newCriteria=''">add_box</mat-icon>
+                <p style="margin-left: 25px; color: #757575;">
+                    Add new criteria types
+                </p>
             </div>
-            <mat-form-field appearance="outline" style="margin: 0px;">
-                <mat-label>choose criteria</mat-label>
-                <mat-select multiple [(ngModel)]="selectedCriteria"
-                    (selectionChange)="criteriaSelection(selectedCriteria)">
-                    <mat-option *ngFor="let cirteriaItem of CRITERIA; let c = index" [value]="cirteriaItem">
-                        {{cirteriaItem.name}}
-                        <mat-icon matTooltip="double click to delete criteria" matTooltipPosition="right"
-                            style="cursor: pointer;font-size: 15px;color: #ee7f25;" (dblclick)="deleteCriteria(c);">
-                            cancel</mat-icon>
-                    </mat-option>
-                </mat-select>z
-            </mat-form-field>
-
-
+            <div style="display: flex;flex-direction: column;">
+                <mat-form-field appearance="outline" style="margin: 0px;">
+                    <mat-label>choose criteria</mat-label>
+                    <mat-select multiple [(ngModel)]="selectedCriteria"
+                        (selectionChange)="criteriaSelection(selectedCriteria)">
+                        <mat-option *ngFor="let cirteriaItem of CRITERIA; let c = index" [value]="cirteriaItem">
+                            {{cirteriaItem.name}}
+                            <mat-icon matTooltip="double click to delete criteria" matTooltipPosition="right"
+                                style="cursor: pointer;font-size: 15px;color: #ee7f25;" (dblclick)="deleteCriteria(c);">
+                                cancel</mat-icon>
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <p style="margin-left: 25px; color: #757575;">
+                    Add new criteria types
+                </p>
+            </div>
         </div>
 
         <div>
