--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -156,6 +156,7 @@ gap: 0px;position: absolute;left: -713px;z-index: 1;border: 2px dashed #324395;"
        max-height: 36rem;
     bottom: -2; ">
 
+<div class="example-handle" cdkDragHandle>WWW</div>
      <!-- Cards Criteria-->
      <mat-card class="example-card">
       <mat-card-header>
