--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.scss
@@ -38,7 +38,47 @@
 .rating-star {
   color: grey;
 }
+.section2{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  width: 100%;
 
+}
+.direction-MinMax{
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.row-boxSM{
+  display: flex;
+  gap: 2rem;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+
+}
+.column-boxSM{
+  display: flex;
+  gap: 2rem;
+  flex-direction: row;
+  align-items: flex-end;
+  width: 100%;
+  justify-content: center;}
+
+.section3{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1.2rem;
+  width: 100%;
+  gap: 1rem;
+}
 @media (min-width: 1025px) {
   .desktop {
     display: flex;
@@ -162,7 +202,7 @@
 .add-column-active {
   outline: none;
   float: right;
-  
+
   mat-icon{
     color: #324395;
   }
@@ -243,14 +283,14 @@ textarea::-webkit-scrollbar-thumb:hover {
 textarea {
   -webkit-tap-highlight-color: transparent;
   width: 100%;
-  // min-height: 1.5rem; 
+  // min-height: 1.5rem;
   padding: 0.2rem 0.0rem;
   // font-size: 1rem;
   // line-height: 2rem;
   // font-weight: 300;
   background: #ffffff;
   justify-content: center;
-  
+
   border-radius: 6px;
   outline: none;
   // box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
@@ -274,7 +314,7 @@ textarea:placeholder-shown {
   background: none;
 }
 
- 
+
 mat-form-field {
   margin-right: 12px;
 }
@@ -531,12 +571,12 @@ input[type="range"]:focus::-ms-fill-upper {
       img:last-child {
           margin-bottom: 0;
       }
-  }    
+  }
 
   .close-modal {
       // margin-bottom: 5px;
       position: relative;
-  
+
       // top: 12%;
       left: 42.5%;
       width: 15%;
@@ -619,7 +659,7 @@ input[type="range"]:focus::-ms-fill-upper {
       height: auto;
   }
 
-  
+
 
   .modal-video .close-modal {
       position: relative;
