--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -75,7 +75,7 @@
             align-items: baseline;">
             <div style="width: 30%; margin-left: 96px;">
                 <label class="selectLabels">Closing date: </label>
-                <mat-form-field>
+                <mat-form-field appearance="outline">
                     <input matInput [matDatepicker]="picker" placeholder="Elija una fecha"  (dateChange)="onSelect($event.value)">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
