--- a/src/app/bmx/components/project-list/project-list.component.html
+++ b/src/app/bmx/components/project-list/project-list.component.html
@@ -4,7 +4,7 @@
             <div style="margin: 20px;font-size: 20px;color:#063074;font-weight: 800;">MATRIX LIST</div>
             <mat-form-field style="float:right; padding-right: 20px" appearance="outline">
                 <mat-label>Search</mat-label>
-                <input matInput (keyup)="applyFilter($event.target.value)" value="search" placeholder="Search">
+                <input matInput (keyup)="applyFilter($event.target.value)" value="" placeholder="Search Project">
             </mat-form-field>
             <mat-form-field appearance="outline" style="border-radius: 0px">
                 <mat-label>Sort By</mat-label>
